Time: 1 ms (100%), Space: 44.3 MB (21.91%) - LeetHub